<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/fragment_margin_top_scroll"
    android:layout_marginBottom="16dp"
    android:orientation="vertical"
    tools:context=".ui.personalaccount.PersonalAccount">

    <!-- TODO: Update blank fragment layout -->
    <ImageView
        android:id="@+id/accountImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:src="@drawable/auth_rectangle" />

    <Button
        android:id="@+id/accountImageButton"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:background="@drawable/nav_rectangle_not_active"
        android:text="@string/update_avatar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="12dp">

        <TextView
            android:id="@+id/accountLoginTextView"
            style="@style/fragment_personal_account_textView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="12dp"
            android:gravity="center"
            android:text="@string/login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/loginEditText"
            style="@style/edit_text_style"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/login_hint"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/accountLoginTextView"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="12dp">

        <TextView
            android:id="@+id/accountFIOTextView"
            style="@style/fragment_personal_account_textView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="12dp"
            android:gravity="center"
            android:text="@string/fio"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/fioEditText"
            style="@style/edit_text_style"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/fio_hint"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/accountFIOTextView"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="12dp">

        <TextView
            android:id="@+id/deliveryAddressTextView"
            style="@style/fragment_personal_account_textView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="12dp"
            android:gravity="center"
            android:text="@string/delivery_address"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/deliveryStreetText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/nav_rectangle_not_active"
            android:gravity="center"
            android:hint="@string/delivery_street_hint"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/deliveryAddressTextView"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/deliveryAddressLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <EditText
            android:id="@+id/deliveryHouseText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            android:layout_weight="1"
            android:background="@drawable/nav_rectangle_not_active"
            android:gravity="center"
            android:hint="@string/delivery_house_hint"
            android:inputType="text" />

        <EditText
            android:id="@+id/deliveryEntranceText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            android:layout_weight="1"
            android:background="@drawable/nav_rectangle_not_active"
            android:gravity="center"
            android:hint="@string/delivery_entrance_hint"
            android:inputType="text" />

        <EditText
            android:id="@+id/deliveryFlatText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="6dp"
            android:layout_weight="1"
            android:background="@drawable/nav_rectangle_not_active"
            android:gravity="center"
            android:hint="@string/delivery_flat_hint"
            android:inputType="text" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="12dp">

        <TextView
            android:id="@+id/ageTextView"
            style="@style/fragment_personal_account_textView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="12dp"
            android:gravity="center"
            android:text="@string/age"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/ageText"
            style="@style/edit_text_style"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/age_hint"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ageTextView"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/saveChangeButton"
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:background="@drawable/nav_rectangle_not_active"
        android:text="@string/save_change" />

    <Button
        android:id="@+id/accountLoginDetailsButton"
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:background="@drawable/nav_rectangle_not_active"
        android:text="@string/account_login_details" />

</LinearLayout>