<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/fragment_margin_top_scroll"
    android:orientation="vertical"
    tools:context=".ui.payment.Payment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="320dp"
        android:layout_height="170dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/payment_card">

        <EditText
            android:id="@+id/editViewCardNumber"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/nav_rectangle_not_active"
            android:gravity="center"
            android:hint="@string/payment_card_number"
            android:inputType="text"
            app:layout_constraintEnd_toStartOf="@+id/imageViewTypeCard"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageViewTypeCard"
            android:layout_width="90dp"
            android:layout_height="37dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/type_card" />

        <EditText
            android:id="@+id/editViewMonth"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/nav_rectangle_not_active"
            android:gravity="center"
            android:hint="@string/payment_month"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editViewCardNumber" />

        <EditText
            android:id="@+id/editViewCVV"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/nav_rectangle_not_active"
            android:gravity="center"
            android:hint="@string/payment_cvv"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editViewCardNumber" />

        <EditText
            android:id="@+id/editViewNameCardholder"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/nav_rectangle_not_active"
            android:gravity="center"
            android:hint="@string/payment_name_cardholder"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="16dp">

        <TextView
            android:id="@+id/textViewPaymentEndSum"
            style="@style/fragment_personal_account_textView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="70dp"
            android:gravity="center"
            android:text="@string/payment_end_sum"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewPaymentEndSumValue"
            style="@style/fragment_personal_account_textView"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:gravity="center"
            android:hint="@string/payment_random_sum"
            app:layout_constraintStart_toEndOf="@+id/textViewPaymentEndSum"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewRuble"
            style="@style/fragment_personal_account_textView"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="3dp"
            android:gravity="center"
            android:text="@string/payment_ruble"
            app:layout_constraintStart_toEndOf="@+id/textViewPaymentEndSumValue"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <Button
            android:id="@+id/buttonPaymentPay"
            android:layout_width="160dp"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:background="@drawable/nav_rectangle_not_active"
            android:text="@string/payment_pay"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonPaymentBack"
            android:layout_width="160dp"
            android:layout_height="40dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/nav_rectangle_not_active"
            android:text="@string/payment_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textViewDelivery"
        style="@style/fragment_personal_account_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/payment_delivery_days" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:background="@drawable/payment_address">

        <TextView
            android:id="@+id/textViewAnotherDelivery"
            style="@style/fragment_personal_account_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/payment_another_delivery"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextStreetDelivery"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/nav_rectangle_not_active"
            android:gravity="center"
            android:hint="@string/delivery_street_hint"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewAnotherDelivery" />

        <LinearLayout
            android:id="@+id/linearLayoutDeliveryAddress"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:weightSum="3"
            app:layout_constraintTop_toBottomOf="@+id/editTextStreetDelivery">

            <EditText
                android:id="@+id/editTextHouseDelivery"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:background="@drawable/nav_rectangle_not_active"
                android:gravity="center"
                android:hint="@string/delivery_house_hint"
                android:inputType="text" />

            <EditText
                android:id="@+id/editTextEntranceDelivery"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@drawable/nav_rectangle_not_active"
                android:gravity="center"
                android:hint="@string/delivery_entrance_hint"
                android:inputType="text" />

            <EditText
                android:id="@+id/deliveryFlatText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:background="@drawable/nav_rectangle_not_active"
                android:gravity="center"
                android:hint="@string/delivery_flat_hint"
                android:inputType="text" />
        </LinearLayout>

        <EditText
            android:id="@+id/editTextWishesDelivery"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/nav_rectangle_not_active"
            android:gravity="center"
            android:hint="@string/payment_wishes_delivery"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutDeliveryAddress" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>