<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/fragment_margin_top_scroll"
    android:orientation="vertical"
    android:weightSum="20"
    tools:context=".ui.main.BasketFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/basketRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="4" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="16">

        <TextView
            android:id="@+id/textViewEndSum"
            style="@style/fragment_basket_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginStart="25dp"
            android:text="@string/end_sum"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewSum"
            style="@style/fragment_basket_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:text="@string/sum"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewEndSum"/>

        <Button
            android:id="@+id/buttonPay"
            android:layout_width="175dp"
            android:layout_height="67dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/nav_rectangle_not_active"
            android:text="@string/pay"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>